--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         * {
             font-family: Arial, sans-serif;
             background-color: #1e1e1e;
-            color: #f0f0f0;
+            color: #eee;
         }
 
         a {
@@ -53,7 +53,7 @@
 
         button {
             background: #4CAF50;
-            color: white;
+            color: #e0e0e0;
             border: none;
             border-radius: 5px;
             padding: 10px 20px;
